<resources>
    <string name="app_name">Notepad</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="login_account">Login Account</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_account">Don\'t Have Account</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="textview">textView</string>
    <string name="todo">TODO</string>
    <string name="notepad">NotePad</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="save_note">Save Note</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reading">reading</string>
    <string name="name">name</string>
    <string name="blank">Loading</string>
    <string name="date">date</string>
    <string name="previous">previous</string>
    <string name="rate">rate</string>
    <string name="current">current</string>
    <string name="unit">unit</string>
    <string name="amount">amount</string>
    <string name="expense">expanse</string>
    <string name="expenditure">expenditure</string>
</resources>